--- a/RestSharpInfra/RestSharpInfra.csproj
+++ b/RestSharpInfra/RestSharpInfra.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OAuth1\OAuthCompleteInformation.cs" />
     <Compile Include="ClientBuilder.cs" />
+    <Compile Include="RequestExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
