--- a/DiscogsClient/packages.config
+++ b/DiscogsClient/packages.config
@@ -2,5 +2,10 @@
 <packages>
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="RateLimiter" version="1.0.0" targetFramework="net45" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net461" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
 </packages>
