--- a/DiscogsClient/DiscogsClient.csproj
+++ b/DiscogsClient/DiscogsClient.csproj
@@ -69,9 +69,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Result\DiscogsRating.cs" />
+    <Compile Include="Data\Result\DiscogsCommunityInfo.cs" />
     <Compile Include="Data\Result\DiscogsCommunity.cs" />
     <Compile Include="Data\Result\DiscogsEntity.cs" />
+    <Compile Include="Data\Result\DiscogsFormat.cs" />
+    <Compile Include="Data\Result\DiscogsIdentifier.cs" />
     <Compile Include="Data\Result\DiscogsImageType.cs" />
+    <Compile Include="Data\Result\DiscogsLabel.cs" />
     <Compile Include="Data\Result\DiscogsPaginedResult.cs" />
     <Compile Include="Data\Result\DiscogsPaginedUrls.cs" />
     <Compile Include="Data\Query\DiscogsPaginable.cs" />
@@ -83,6 +88,8 @@
     <Compile Include="Data\Result\DiscogsImage.cs" />
     <Compile Include="Data\Result\DiscogsRelease.cs" />
     <Compile Include="Data\Result\DiscogsSearchResults.cs" />
+    <Compile Include="Data\Result\DiscogsUser.cs" />
+    <Compile Include="Data\Result\DiscogsVideo.cs" />
     <Compile Include="DiscogsAuthentifierClient.cs" />
     <Compile Include="DiscogsClient.cs" />
     <Compile Include="DiscogsException.cs" />
