Add Master + clean API

--- a/DiscogsClient.Test/DiscogsClient.Test.csproj
+++ b/DiscogsClient.Test/DiscogsClient.Test.csproj
@@ -97,6 +97,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ImageDeserializationTest.cs" />
+    <Compile Include="MasterDeserializationTest.cs" />
     <Compile Include="ReleaseDeserializationTest.cs" />
     <Compile Include="TrackDeserializationTest.cs" />
     <Compile Include="ResultDeserializationTest.cs" />
