--- a/DiscogsClient/DiscogsClient.csproj
+++ b/DiscogsClient/DiscogsClient.csproj
@@ -65,12 +65,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Query\DiscogsSortInformation.cs" />
     <Compile Include="Data\Result\DiscogsArtistRelease.cs" />
     <Compile Include="Data\Result\DiscogsArtist.cs" />
     <Compile Include="Data\Result\DiscogsLabelRelease.cs" />
     <Compile Include="Data\Result\DiscogsPaginableResults.cs" />
     <Compile Include="Data\Result\DiscogsSortOrder.cs" />
-    <Compile Include="Data\Result\DiscogsBandMember.cs" />
+    <Compile Include="Data\Result\DiscogsGroupOrBandMember.cs" />
     <Compile Include="Data\Result\DiscogsArtistSortType.cs" />
     <Compile Include="Data\Result\DiscogsMaster.cs" />
     <Compile Include="Data\Result\DiscogsRating.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Data\Result\DiscogsUser.cs" />
     <Compile Include="Data\Result\DiscogsReleaseVersion.cs" />
     <Compile Include="Data\Result\DiscogsVideo.cs" />
+    <Compile Include="Data\Result\DiscogsArtistReleases.cs" />
     <Compile Include="DiscogsAuthentifierClient.cs" />
     <Compile Include="DiscogsClient.cs" />
     <Compile Include="DiscogsException.cs" />
