--- a/DiscogsClient.Test/DiscogsClient.Test.csproj
+++ b/DiscogsClient.Test/DiscogsClient.Test.csproj
@@ -51,8 +51,16 @@
       <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RateLimiter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RateLimiter.1.0.0\lib\net45\RateLimiter.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.105.2.3\lib\net46\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RestSharpHelper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharpHelper.1.1.0\lib\net461\RestSharpHelper.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -108,10 +116,6 @@
     <ProjectReference Include="..\DiscogsClient\DiscogsClient.csproj">
       <Project>{f0138d25-8712-4dca-880a-507067ac1326}</Project>
       <Name>DiscogsClient</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RestSharpInfra\RestSharpInfra.csproj">
-      <Project>{a9655673-4031-42c9-a3d6-53d01dac5dbe}</Project>
-      <Name>RestSharpInfra</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
