--- a/DiscogsClient.Test/packages.config
+++ b/DiscogsClient.Test/packages.config
@@ -5,9 +5,9 @@
   <package id="RateLimiter" version="1.0.0" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.0" targetFramework="net461" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
   <package id="xunit" version="2.0.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
